--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = Auteur.o Categorie.o Client.o emprunt.o Exemplaire.o Livre.o main.o Offre.o usefulFunctions.o menu.o
-LINKOBJ  = Auteur.o Categorie.o Client.o emprunt.o Exemplaire.o Livre.o main.o Offre.o usefulFunctions.o menu.o
+OBJ      = Auteur.o Categorie.o Client.o main.o Offre.o usefulFunctions.o menu.o emprunt.o Exemplaire.o Livre.o
+LINKOBJ  = Auteur.o Categorie.o Client.o main.o Offre.o usefulFunctions.o menu.o emprunt.o Exemplaire.o Livre.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -33,15 +33,6 @@ Categorie.o: Categorie.c
 Client.o: Client.c
 	$(CC) -c Client.c -o Client.o $(CFLAGS)
 
-emprunt.o: emprunt.c
-	$(CC) -c emprunt.c -o emprunt.o $(CFLAGS)
-
-Exemplaire.o: Exemplaire.c
-	$(CC) -c Exemplaire.c -o Exemplaire.o $(CFLAGS)
-
-Livre.o: Livre.c
-	$(CC) -c Livre.c -o Livre.o $(CFLAGS)
-
 main.o: main.c
 	$(CC) -c main.c -o main.o $(CFLAGS)
 
@@ -53,3 +44,12 @@ usefulFunctions.o: usefulFunctions.c
 
 menu.o: menu.c
 	$(CC) -c menu.c -o menu.o $(CFLAGS)
+
+emprunt.o: emprunt.c
+	$(CC) -c emprunt.c -o emprunt.o $(CFLAGS)
+
+Exemplaire.o: Exemplaire.c
+	$(CC) -c Exemplaire.c -o Exemplaire.o $(CFLAGS)
+
+Livre.o: Livre.c
+	$(CC) -c Livre.c -o Livre.o $(CFLAGS)
